Fix editing buttons div overlapping metadata editor

--- a/resources/public/css/main.css
+++ b/resources/public/css/main.css
@@ -7289,7 +7289,7 @@ footer ul li {
 }
 
 .result-view-container .result-view .result-view-content .editing-buttons {
-  width: 100%;
+  width: 45%;
   position: absolute;
   bottom: 15px;
   left: 15px;
