--- a/scss/partials/_search-results.scss
+++ b/scss/partials/_search-results.scss
@@ -316,7 +316,7 @@ $result-highlight: $orange-light;
       }
 
       .editing-buttons {
-        width: 100%;
+        width: 45%;
         position: absolute;
         bottom: 15px;
         left: 15px;
